--- a/packages/bookshelft/package.json
+++ b/packages/bookshelft/package.json
@@ -6,6 +6,7 @@
     "@apollo/react-hooks": "^3.0.0",
     "@bookshelf/layout": "1.0.0",
     "apollo-boost": "^0.4.3",
+    "formik": "^1.5.8",
     "graphql": "^14.4.2",
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.7.2",
@@ -28,7 +29,8 @@
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
     "styled-components": "^3.3.3",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.5.0",
@@ -38,7 +40,9 @@
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
     "@types/react": "^16.8.25",
-    "@types/react-dom": "^16.8.5"
+    "@types/react-dom": "^16.8.5",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/yup": "^0.26.22"
   },
   "scripts": {
     "start": "react-scripts start",
