--- a/packages/bookshelft/package.json
+++ b/packages/bookshelft/package.json
@@ -37,12 +37,16 @@
     "@graphql-codegen/typescript": "^1.5.0",
     "@graphql-codegen/typescript-operations": "^1.5.0",
     "@graphql-codegen/typescript-react-apollo": "^1.5.0",
+    "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
     "@types/react": "^16.8.25",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^4.3.4",
-    "@types/yup": "^0.26.22"
+    "@types/yup": "^0.26.22",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "react-test-renderer": "^16.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
