--- a/packages/bookshelft/package.json
+++ b/packages/bookshelft/package.json
@@ -41,6 +41,7 @@
     "@types/enzyme": "^3.10.3",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
+    "@types/ramda": "^0.26.19",
     "@types/react": "^16.8.25",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^4.3.4",
