--- a/packages/bookshelft/codegen.yml
+++ b/packages/bookshelft/codegen.yml
@@ -9,6 +9,7 @@ generates:
       - 'typescript-react-apollo'
     config:
       withHooks: true
+      apolloReactHooksImportFrom: ../lib/apollo
       withComponent: false
       withHOC: false
 
