--- a/packages/bookshelft/package.json
+++ b/packages/bookshelft/package.json
@@ -7,6 +7,7 @@
     "@bookshelf/layout": "1.0.0",
     "apollo-boost": "^0.4.3",
     "formik": "^1.5.8",
+    "global": "^4.4.0",
     "graphql": "^14.4.2",
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.7.2",
@@ -28,6 +29,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
+    "serve": "^11.1.0",
     "styled-components": "^3.3.3",
     "typescript": "^3.5.3",
     "yup": "^0.27.0"
@@ -39,6 +41,7 @@
     "@graphql-codegen/typescript-operations": "^1.5.0",
     "@graphql-codegen/typescript-react-apollo": "^1.5.0",
     "@types/enzyme": "^3.10.3",
+    "@types/graphql": "^14.2.3",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
     "@types/ramda": "^0.26.19",
