--- a/packages/bookshelft/package.json
+++ b/packages/bookshelft/package.json
@@ -7,29 +7,19 @@
     "@bookshelf/layout": "1.0.0",
     "apollo-boost": "^0.4.3",
     "formik": "^1.5.8",
-    "global": "^4.4.0",
     "graphql": "^14.4.2",
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.7.2",
     "ramda": "^0.25.0",
-    "raven-for-redux": "^1.3.1",
     "raven-js": "^3.26.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-infinite-scroller": "^1.2.0",
     "react-intl": "^2.4.0",
-    "react-modal": "^3.5.1",
-    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.0.1",
     "recompose": "^0.30.0",
-    "redux": "^4.0.0",
-    "redux-actions": "^2.4.0",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.2",
-    "reselect": "^4.0.0",
-    "serve": "^11.1.0",
     "styled-components": "^3.3.3",
     "typescript": "^3.5.3",
     "yup": "^0.27.0"
@@ -48,6 +38,7 @@
     "@types/react": "^16.8.25",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^4.3.4",
+    "@types/recompose": "^0.30.6",
     "@types/yup": "^0.26.22",
     "cypress": "^3.4.1",
     "enzyme": "^3.10.0",
