--- a/packages/bookshelf/package.json
+++ b/packages/bookshelf/package.json
@@ -37,6 +37,7 @@
     "@types/ramda": "^0.26.19",
     "@types/react": "^16.8.25",
     "@types/react-dom": "^16.8.5",
+    "@types/react-helmet": "^5.0.9",
     "@types/react-intl": "^2.3.18",
     "@types/react-router-dom": "^4.3.4",
     "@types/recompose": "^0.30.6",
